--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,8 +1,108 @@
-header {
-    width: 100%;
-    height: 80px;
-    left: 0px;
-    top: 0px;
+
+.nav {
     background: #1A0B2E;
-    box-shadow: 0px 6px 22px -3px rgba(0, 0, 0, 0.1)
-}
+    height: 7rem;
+    width: 100%;
+    position: relative;
+  }
+  
+  .nav > .nav-header {
+    display: inline;
+  }
+  
+  .nav > .nav-header > .nav-title {
+    display: inline-block;
+    font-size: 22px;
+    color: #fff;
+    padding: 10px 10px 10px 10px;
+  }
+  
+  .nav > .nav-btn {
+    display: none;
+  }
+  
+  .nav > .nav-links {
+    display: inline;
+    float: right;
+    font-size: 18px;
+  }
+  
+  .nav > .nav-links > a {
+    display: inline-block;
+    padding: 13px 10px 13px 10px;
+    text-decoration: none;
+    color: #efefef;
+  }
+  
+  .nav > .nav-links > a:hover {
+    background: #1A0B2E;
+  }
+  
+  .nav > #nav-check {
+    display: none;
+  }
+
+ .logo {
+    width: 6rem;
+    margin-left: 2rem;
+    margin-top: 1rem;
+ }
+  
+  @media (max-width:680px) {
+    .nav > .nav-btn {
+      display: inline-block;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+    }
+    .nav > .nav-btn > label {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      padding: 13px;
+      padding-top: 2rem;
+    }
+    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+    .nav > .nav-btn > label > span {
+      display: block;
+      width: 25px;
+      height: 10px;
+      border-top: 2px solid #eee;
+    }
+    .nav > .nav-links {
+      margin-top: 1rem;
+      position: absolute;
+      display: block;
+      width: 100%;
+      background: #1A0B2E;
+      height: 0px;
+      transition: all 0.3s ease-in;
+      overflow-y: hidden;
+      top: 50px;
+      left: -10px;
+      text-align: right;
+    }
+
+    .nav-link-resume-btn{
+      width: 15rem;
+      height: 5rem;
+      margin-right: 0;
+    }
+
+    .nav > .nav-links > a {
+      display: block;
+      width: 100%;
+      margin-left: -2rem;
+      padding-top: 1rem;
+    }
+    .nav > #nav-check:not(:checked) ~ .nav-links {
+      height: 0px;
+    }
+    .nav > #nav-check:checked ~ .nav-links {
+      height: calc(100vh - 50px);
+      overflow-y: auto;
+    }
+  }
+
