--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -112,7 +112,7 @@
         height: 8rem;
     }
     .aboutme-sub-heading {
-        margin-bottom: 5rem;
+        margin-bottom: 3rem;
     }
     .profile-tag-main {
         margin-bottom: 1rem;
@@ -121,4 +121,7 @@
         margin-top: 0rem;
         font-size: 0.4rem;
     }
+	.aboutme-text {
+	margin-bottom:3rem;
+	}
 }
