--- a/src/App.css
+++ b/src/App.css
@@ -369,6 +369,9 @@ h2 {
   border: none;
   color: #FFFFFF;
   border-radius: .5rem;
+  text-align:center;
+  line-height:5rem;
+  text-decoration:none;
 }
 
 .see-my-work--btn {
