update svg image

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -101,7 +101,7 @@
 
 .profile-container {
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 
 .profile-title {
@@ -112,6 +112,16 @@
 	font-size:12px;
 }
 
+.profile-title-left{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	gap:1rem;
+}
+.profile-image-svg {
+	width:100%;
+	height:100%;
+}
 
 @media (max-width: 32rem) {
     .profile{
