--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -117,13 +117,23 @@
 	flex-direction:column;
 	justify-content:center;
 	gap:1rem;
+	width:33%
+}
+
+.profile-svg-right {
+	width:66%
 }
 .profile-image-svg {
-	width:100%;
-	height:100%;
+	max-width:100%;
+	height:auto;
 }
 
 @media (max-width: 32rem) {
+	.profile-container {
+		flex-direction:column;
+		justify-content:center;
+		align-items:center;
+	}
     .profile{
         width: 90%;
     }
@@ -149,3 +159,4 @@
 	margin-bottom:3rem;
 	}
 }
+
