--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -134,6 +134,19 @@
 		justify-content:center;
 		align-items:center;
 	}
+	.profile-title-left{
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		align-items:center;
+		gap:1rem;
+		width:100%
+	}
+
+	.profile-svg-right {
+		width:100%
+	}
+	
     .profile{
         width: 90%;
     }
