--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -133,6 +133,12 @@
     line-height: 2.5rem;
 }
 
+.profile-sub-title {
+	font-size: 1.875rem;
+    line-height: 2.25rem;
+	margin-bottom:2rem;
+}
+
 @media (max-width: 32rem) {
 	.profile-container {
 		flex-direction:column;
