--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -102,6 +102,7 @@
 .profile-container {
 	display:flex;
 	justify-content:space-around;
+	padding:0rem 5rem;
 }
 
 .profile-title {
@@ -118,7 +119,6 @@
 	justify-content:center;
 	gap:1rem;
 	width:33%;
-	align-items:center;
 }
 
 .profile-svg-right {
