--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 .profile  {
     width: 70%;
     text-align: left;
@@ -103,6 +102,7 @@
 	display:flex;
 	justify-content:space-around;
 	padding:0rem 5rem;
+	 font-family: 'Poppins';
 }
 
 .profile-title {
