--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -102,7 +102,7 @@
 	display:flex;
 	justify-content:space-around;
 	padding:0rem 5rem;
-	 font-family: 'Poppins';
+	font-family: 'Poppins';
 }
 
 .profile-title {
@@ -120,10 +120,12 @@
 .profile-title-left-section {
 	display:flex;
 	flex-direction:column;
-	gap:1rem;
+	gap:2rem;
 	width:100%;
 	margin-left:10rem;
-	justify-content:center
+	justify-content:center;
+	margin-left:7rem;
+	margin-top:25rem;
 }
 
 .profile-svg-right {
@@ -136,13 +138,13 @@
 }
 
 .profile-title {
-	font-size: 2.25rem;
-    line-height: 2.5rem;
+	font-size: 3.25rem;
+    line-height: 3.5rem;
 }
 
 .profile-sub-title {
-	font-size: 1.875rem;
-    line-height: 2.25rem;
+	font-size: 2.875rem;
+    line-height: 3.25rem;
 	margin-bottom:2rem;
 }
 
