--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -142,6 +142,10 @@
 	color:rgb(229 231 235);
 }
 
+.view-resume--btn:hover{
+	background-color:rgb(113, 39, 186)
+}
+
 @media (max-width: 32rem) {
 	.profile-container {
 		flex-direction:column;
