--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -174,6 +174,11 @@
 		line-height:1.25rem;
 		margin-bottom:.5rem;
 	}
+	.profile-title-left-section {
+		margin-left: 7rem; 
+		align-items: center;
+		margin-top: 5rem;
+	}
 	
     .profile{
         width: 90%;
