--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,7 +3,8 @@
     background: #1A0B2E;
     height: 7rem;
     width: 100%;
-    position: relative;
+    display:flex;
+	justify-content:space-between;
   }
   
   .nav > .nav-header {
@@ -22,8 +23,6 @@
   }
   
   .nav > .nav-links {
-    display: inline;
-    float: right;
     font-size: 18px;
   }
   
