--- a/src/App.css
+++ b/src/App.css
@@ -479,7 +479,7 @@ h2 {
   width: 10rem;
   height: 2rem;
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 600;
   background-color: transparent;
   outline:none;
   border: 1px solid #64ffda;
@@ -493,7 +493,14 @@ h2 {
 .nav-link-resume-btn {
   margin-right: 2rem;
   margin-top: 1rem;
+  border:none;
+  background-color:steelblue;
+  
 }
+.nav-link-resume-btn:hover{
+	background-color:#3c74a3f7;
+}
+
 
 .social-icon{
   width: 5%;
